--- a/pages/header.html
+++ b/pages/header.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/styles/header.css">
+    <title>Menu Burger</title>
 </head>
 <body>
     <header>
-    
+        <button class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
+        <button class="header"><a href="#Projet">Projet</a></button>
+        <button class="header"><a href="#Apropos">A propos</a></button>
+        <button class="header"><a href="#Contact">Contact</a></button>
+        <button class="header">Langue</button>
     </header>
+
+    <header class="mobile">
+        <button class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
+        <button class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+    </header>
+    <nav class="headercontent">
+        <button class="header"><a href="#Projet">Projet</a></button>
+        <button class="header"><a href="#Apropos">A propos</a></button>
+        <button class="header"><a href="#Contact">Contact</a></button>
+        <button class="header">Langue</button>
+    </nav>
 </body>
+
+<script src="../js/index.js"></script>
+
 </html>
