ajouter d'une premiere version du footer

--- a/pages/template.html
+++ b/pages/template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/template.css">
     <title>Menu Burger</title>
 </head>
 <body>
@@ -26,6 +26,17 @@
         <button class="header"><a href="#Contact">Contact</a></button>
         <button class="header">Langue</button>
     </nav>
+
+
+
+
+
+    <footer>
+        <h4>Soutenez-nous !</h4>
+        <p>Vous voulez faire partie de l'aventure</p>
+        <button>Faire un Don</button>
+        <img src="../images/asset 9.png" alt="">
+    </footer>
 </body>
 
 <script src="../js/index.js"></script>
