add style for project page

--- a/pages/project.html
+++ b/pages/project.html
@@ -32,58 +32,58 @@
 
         <section class="organisation">
             <article class="left">
-                <article class="article1" tabindex="2">
+                <article class="article" tabindex="2">
                     <div class="title">
                         <p class="number">1</p>
                         <p class="subtitle">L'INVENTAIRE</p>
+                    </div>
                         <p class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
                             et
                             voir ceux qu’il faut reconditionner.</p>
-                    </div>
                 </article>
-                <article class="article3" tabindex="4">
+                <article class="article" tabindex="4">
                     <div class="title">
                         <p class="number">3</p>
                         <p class="subtitle">LE VOYAGE</p>
-                        <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
-                            l’atlantique. Hâte d’arriver à destination!</p>
                     </div>
+                        <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                            l’atlantique. Hâte d’arriver à destination!</p>    
                 </article>
-                <article class="article5" tabindex="6">
+                <article class="article" tabindex="6">
                     <div class="title">
                         <p class="number">5</p>
                         <p class="subtitle">L’INSPECTION</p>
+                    </div>
                         <p class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
                             de neuf si nécessaire, puis ils font un premier choix de patients qui recevront les
                             appareillages.</p>
-                    </div>
                 </article>
             </article>
             <article class="right">
-                <article class="article2" tabindex="3">
+                <article class="article" tabindex="3">
                     <div class="title">
                         <p class="number">2</p>
                         <p class="subtitle">LA COLLECTE</p>
+                    </div>
                         <p class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
                             les appareillages dans les centres médicaux.</p>
-                    </div>
                 </article>
-                <article class="article4" tabindex="5">
+                <article class="article" tabindex="5">
                     <div class="title">
                         <p class="number">4</p>
                         <p class="subtitle">LE VOYAGE</p>
+                    </div>
                         <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
                             l’atlantique. Hâte d’arriver à destination!</p>
-                    </div>
                 </article>
-                <article class="article6" tabindex="7">
+                <article class="article" tabindex="7">
                     <div class="title">
                         <p class="number">6</p>
                         <p class="subtitle">LA DISTRIBUTION</p>
+                    </div>   
                         <p class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
                             avec une prise en main afin de s’assurer que l’appareillage corresponde bien au besoin du
                             patient.</p>
-                    </div>
                 </article>
             </article>
         </section>
