--- a/pages/template.html
+++ b/pages/template.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <header>
-        <button class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
-        <button class="header"><a href="#Projet">Projet</a></button>
-        <button class="header"><a href="#Apropos">A propos</a></button>
-        <button class="header"><a href="#Contact">Contact</a></button>
+        <button class="logo" href="#HOME"><img src="/images/asset 9.png" alt=""></button>
+        <button class="header" href="#Projet">Projet </button>
+        <button class="header" href="#Apropos">A propos</button>
+        <button class="header" href="#Contact">Contact</button>
         <button class="header">Langue</button>
     </header>
-
     <header class="mobile">
         <button class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
         <button class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
