--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,25 +19,30 @@
             <form method="POST" id="contact-form">
                 <fieldset>
                     <label for="from_name" tabindex="2">Nom et Prénom</label>
-                    <input type="text" id="from_name" name="from_name" tabindex="3" placeholder="Nom et Prénom" required>
+                    <input type="text" id="from_name" name="from_name" tabindex="3" placeholder="Nom et Prénom"
+                        required>
                 </fieldset>
 
                 <fieldset>
                     <label for="from_email" tabindex="4">Email</label>
-                    <input type="email" id="from_email" name="from_email" tabindex="5" placeholder="Email, exemple: test@gmail.com" required>
+                    <input type="email" id="from_email" name="from_email" tabindex="5"
+                        placeholder="Email, exemple: test@gmail.com" required>
                 </fieldset>
 
                 <fieldset>
                     <label for="message" tabindex="6">Message</label>
-                    <textarea id="message" name="message" rows="4" tabindex="7" placeholder="Message" required></textarea>
+                    <textarea id="message" name="message" rows="4" tabindex="7" placeholder="Message" required> </textarea>
                 </fieldset>
 
-                <button type="submit" tabindex="8">Soumettre le formulaire</button>
+                <div class="button-container">
+                    <button type="submit" tabindex="8">Soumettre le formulaire</button>
+                    <button type="reset" tabindex="9">reset le formulaire</button>
+                </div>
             </form>
         </section>
 
         <figure>
-            <img src="/images/asset14.png" alt="deux mains qui se serrent"/>
+            <img src="/images/asset14.png" alt="deux mains qui se serrent" />
         </figure>
     </main>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
