header fini ajout du hover et des couleurs

--- a/pages/template.html
+++ b/pages/template.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="/styles/template.css">
     <title>Menu Burger</title>
 </head>
+
 <body>
     <header>
-        <button class="logo" href="#HOME"><img src="/images/asset 9.png" alt=""></button>
-        <button class="header" href="#Projet">Projet </button>
-        <button class="header" href="#Apropos">A propos</button>
-        <button class="header" href="#Contact">Contact</button>
-        <button class="header">Langue</button>
+        <button tabindex="0" class="logo" href="#HOME"><img src="/images/asset 9.png" alt=""></button>
+        <button tabindex="0" class="header" href="#Projet">Projet </button>
+        <button tabindex="0" class="header" href="#Apropos">A propos</button>
+        <button tabindex="0" class="header" href="#Contact">Contact</button>
+        <button tabindex="0" class="header">Langue</button>
     </header>
     <header class="mobile">
-        <button class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
-        <button class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="0" class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
+        <button tabindex="0" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button class="header"><a href="#Projet">Projet</a></button>
-        <button class="header"><a href="#Apropos">A propos</a></button>
-        <button class="header"><a href="#Contact">Contact</a></button>
-        <button class="header">Langue</button>
+        <button tabindex="0" class="header" href="#Projet">Projet</button>
+        <button tabindex="0" class="header" href="#Apropos">A propos</button>
+        <button tabindex="0" class="header" href="#Contact">Contact</button>
+        <button tabindex="0" class="header">Langue</button>
     </nav>
 
 
@@ -31,10 +32,10 @@
 
 
     <footer>
-        <h4>Soutenez-nous !</h4>
-        <p>Vous voulez faire partie de l'aventure</p>
-        <button>Faire un Don</button>
-        <img src="../images/asset 9.png" alt="">
+        <h4 tabindex="0" >Soutenez-nous !</h4>
+        <p tabindex="0">Vous voulez faire partie de l'aventure</p>
+        <button tabindex="0">Faire un Don</button>
+        <img tabindex="0" src="../images/asset 9.png" alt="logo amar représentant un coeur">
     </footer>
 </body>
 
