--- a/pages/project.html
+++ b/pages/project.html
@@ -26,8 +26,11 @@
                 fonctionner.</p>
             <p>Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
                 l'ambition d'étendre notre initiative à l'échelle nationale.</p>
-            <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png" alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
-            <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" alt="Logo HOPAC">
+            <div class="img">
+                <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png"
+                    alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
+                <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" alt="Logo HOPAC">
+            </div>
         </section>
 
         <section class="organisation">
@@ -37,26 +40,26 @@
                         <p class="number">1</p>
                         <p class="subtitle">L'INVENTAIRE</p>
                     </div>
-                        <p class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
-                            et
-                            voir ceux qu’il faut reconditionner.</p>
+                    <p class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
+                        et
+                        voir ceux qu’il faut reconditionner.</p>
                 </article>
                 <article class="article" tabindex="4">
                     <div class="title">
                         <p class="number">3</p>
                         <p class="subtitle">LE VOYAGE</p>
                     </div>
-                        <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
-                            l’atlantique. Hâte d’arriver à destination!</p>    
+                    <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                        l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
                 <article class="article" tabindex="6">
                     <div class="title">
                         <p class="number">5</p>
                         <p class="subtitle">L’INSPECTION</p>
                     </div>
-                        <p class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
-                            de neuf si nécessaire, puis ils font un premier choix de patients qui recevront les
-                            appareillages.</p>
+                    <p class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
+                        de neuf si nécessaire, puis ils font un premier choix de patients qui recevront les
+                        appareillages.</p>
                 </article>
             </article>
             <article class="right">
@@ -65,25 +68,25 @@
                         <p class="number">2</p>
                         <p class="subtitle">LA COLLECTE</p>
                     </div>
-                        <p class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
-                            les appareillages dans les centres médicaux.</p>
+                    <p class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
+                        les appareillages dans les centres médicaux.</p>
                 </article>
                 <article class="article" tabindex="5">
                     <div class="title">
                         <p class="number">4</p>
                         <p class="subtitle">LE VOYAGE</p>
                     </div>
-                        <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
-                            l’atlantique. Hâte d’arriver à destination!</p>
+                    <p class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                        l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
                 <article class="article" tabindex="7">
                     <div class="title">
                         <p class="number">6</p>
                         <p class="subtitle">LA DISTRIBUTION</p>
-                    </div>   
-                        <p class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
-                            avec une prise en main afin de s’assurer que l’appareillage corresponde bien au besoin du
-                            patient.</p>
+                    </div>
+                    <p class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
+                        avec une prise en main afin de s’assurer que l’appareillage corresponde bien au besoin du
+                        patient.</p>
                 </article>
             </article>
         </section>
