--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,36 +7,54 @@
     <title>Contactez Amar</title>
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
     <link href="/styles/contact.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/styles/template.css">
 </head>
 
 <body>
     <header>
+        <button tabindex="1" class="logo" href="#HOME"><img src="/images/asset 9.png" alt=""></button>
+        <button tabindex="2" class="header" href="#Projet">Projet </button>
+        <button tabindex="3" class="header" href="#Apropos">A propos</button>
+        <button tabindex="4" class="header" href="#Contact">Contact</button>
+        <div id="google_translate_element" tabindex="5"></div>
+
     </header>
+    <header class="mobile">
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+    </header>
+    <nav class="headercontent">
+        <button tabindex="1" class="header" href="#Projet">Projet</button>
+        <button tabindex="2" class="header" href="#Apropos">A propos</button>
+        <button tabindex="3" class="header" href="#Contact">Contact</button>
+        <div tabindex="4" id="google_translate_element"></div>
+    </nav>
 
     <main>
         <section aria-labelledby="contact-title">
-            <h1 tabindex="1">Besoin d'informations?<br>Contactez-nous!</h1>
+            <h1 tabindex="6">Besoin d'informations?<br>Contactez-nous!</h1>
             <form method="POST" id="contact-form">
                 <fieldset>
-                    <label for="from_name" tabindex="2">Nom et Prénom</label>
-                    <input type="text" id="from_name" name="from_name" tabindex="3" placeholder="Nom et Prénom"
+                    <label for="from_name" tabindex="7">Nom et Prénom</label>
+                    <input type="text" id="from_name" name="from_name" tabindex="8" placeholder="Nom et Prénom"
                         required>
                 </fieldset>
 
                 <fieldset>
-                    <label for="from_email" tabindex="4">Email</label>
-                    <input type="email" id="from_email" name="from_email" tabindex="5"
+                    <label for="from_email" tabindex="9">Email</label>
+                    <input type="email" id="from_email" name="from_email" tabindex="10"
                         placeholder="Email, exemple: test@gmail.com" required>
                 </fieldset>
 
                 <fieldset>
-                    <label for="message" tabindex="6">Message</label>
-                    <textarea id="message" name="message" rows="4" tabindex="7" placeholder="Message" required> </textarea>
+                    <label for="message" tabindex="11">Message</label>
+                    <textarea id="message" name="message" rows="4" tabindex="12" placeholder="Message"
+                        required> </textarea>
                 </fieldset>
 
                 <div class="button-container">
-                    <button type="submit" tabindex="8">Soumettre le formulaire</button>
-                    <button type="reset" tabindex="9">reset le formulaire</button>
+                    <button class="button-form" type="submit" tabindex="13">Soumettre le formulaire</button>
+                    <button class="button-form" type="reset" tabindex="14">reset le formulaire</button>
                 </div>
             </form>
         </section>
@@ -47,6 +65,11 @@
     </main>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="/js/contact.js"></script>
+    <script src="/js/index.js"></script>
+    <script type="text/javascript"
+        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <script type="text/javascript" src="/js/translate.js"></script>
+
 </body>
 
 </html>
