ajout du footer fini a 100%

--- a/pages/template.html
+++ b/pages/template.html
@@ -10,20 +10,20 @@
 
 <body>
     <header>
-        <button tabindex="0" class="logo" href="#HOME"><img src="/images/asset 9.png" alt=""></button>
-        <button tabindex="0" class="header" href="#Projet">Projet </button>
-        <button tabindex="0" class="header" href="#Apropos">A propos</button>
-        <button tabindex="0" class="header" href="#Contact">Contact</button>
+        <button tabindex="0" class="logo" href="/pages/home.html"><img src="/images/image.png" alt=""></button>
+        <button tabindex="0" class="header" href="/pages/projet.html">Projet </button>
+        <button tabindex="0" class="header" href="/pages/about.html">A propos</button>
+        <button tabindex="0" class="header" href="/pages/contact.html">Contact</button>
         <button tabindex="0" class="header">Langue</button>
     </header>
     <header class="mobile">
-        <button tabindex="0" class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
+        <button tabindex="0" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
         <button tabindex="0" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="0" class="header" href="#Projet">Projet</button>
-        <button tabindex="0" class="header" href="#Apropos">A propos</button>
-        <button tabindex="0" class="header" href="#Contact">Contact</button>
+        <button tabindex="0" class="header" href="/pages/projet.html">Projet</button>
+        <button tabindex="0" class="header" href="/pages/about.html">A propos</button>
+        <button tabindex="0" class="header" href="/pages/contact.html">Contact</button>
         <button tabindex="0" class="header">Langue</button>
     </nav>
 
@@ -32,10 +32,15 @@
 
 
     <footer>
-        <h4 tabindex="0" >Soutenez-nous !</h4>
-        <p tabindex="0">Vous voulez faire partie de l'aventure</p>
-        <button tabindex="0">Faire un Don</button>
-        <img tabindex="0" src="../images/asset 9.png" alt="logo amar représentant un coeur">
+        <h4 tabindex="0">Soutenez-nous !</h4>
+        <p tabindex="0">Vous voulez faire partie de l'aventure ?</p>
+        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="0">Faire un don</button>
+        <div class="logo-footer">
+            <img tabindex="0" src="../images/image.png" alt="logo amar représentant un coeur">
+            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+        </div>
+        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+
     </footer>
 </body>
 
