--- a/index.html
+++ b/index.html
@@ -3,9 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AMAR - Mobilité, Accessibilité et Réhabilitation | Association pour la mobilité, l'accessibilité et la réhabilitation</title>
+    <meta name="description" content="Faites une différence avec notre association à but non lucratif - Don de matériel médical pour enfants avec handicap moteur au Salvador">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    
+    <Main>
+        <section class="Title">
+            <h1>           
+                Ensemble pour la mobilité des enfants avec un handicap moteur.
+            </h1>
+            <img src="/images/asset 1.png" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+        </section>
+        <section class="First">
+            <h1>           
+                Notre raison d'être.
+            </h1>
+            <section>
+                <p>
+                    L'association a pour but de sensibiliser et de faciliter la mobilité, l'accessibilité et la réhabilitation pour les personnes en situation de handicap.
+                    Elle aspire à améliorer leur qualité de vie en leur permettant d'accéder à des équipements adaptés.
+                    L'objectif de A.M.A.R. est de créer un environnement inclusif où chaque personne a la possibilité de vivre et de s'épanouir pleinement dans la société.
+                </p>
+                <img src="/images/a.m.a.r.-identite-illustration-papillon.png" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+            </section>
+        </section>
+        <section class="Second">
+            <h1>                
+                Que fait A.M.A.R ?
+            </h1>
+            <section class="Third">
+                <p>
+                    Des enfants, ayant un handicap moteur, bénéficient d'appareillages selon leurs besoins.
+                    Le but de l’association A.M.A.R est de récupérer ces appareillages afin de faire donation à un maximum d’enfants...
+                    Lorsque arrive le moment de changer, environ tous les 2 ou 3 ans, l'ancien appareillage, encore en bon état, 
+                    ne se réutilise pas et il finit la plupart du temps à la déchetterie.
+                </p>
+                <section>
+                    <img src="/images/asset 7.png" alt=""/>
+                    <h6>Verticalisateur</h6>
+                </section>
+            </section>
+            <section class="Fourth">
+                <p>
+                    Le but de l’association A.M.A.R est de récupérer ces appareillages afin de faire donation à un maximum d’enfants...
+                    Lorsque arrive le moment de changer, environ tous les 2 ou 3 ans, l'ancien appareillage, encore en bon état, ne se réutilise pas et il finit la plupart du temps à la déchetterie.
+                    Tout le matériel est suivi et quand ces enfants grandiront, ils les redonneront à leur tour pour être réutilisés autant de fois que possible.
+                    La vie, la santé et le confort de milliers d’enfants sera ainsi amélioré !
+                </p>
+                <section>
+                    <img src="/images/asset 5.png" alt=""/>
+                    <h6>Fauteuil</h6>
+                </section>
+            </section>
+        </section>          
+    </Main>
+
 </body>
 </html>
