--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,8 +16,14 @@
         <button tabindex="2" class="header" href="#Projet">Projet </button>
         <button tabindex="3" class="header" href="#Apropos">A propos</button>
         <button tabindex="4" class="header" href="#Contact">Contact</button>
-        <div id="google_translate_element" tabindex="5"></div>
-
+        <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({ pageLanguage: 'fr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+            }
+        </script>
+        <script type="text/javascript"
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
         <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/asset 9.png" alt=""></a></button>
@@ -27,7 +33,7 @@
         <button tabindex="1" class="header" href="#Projet">Projet</button>
         <button tabindex="2" class="header" href="#Apropos">A propos</button>
         <button tabindex="3" class="header" href="#Contact">Contact</button>
-        <div tabindex="4" id="google_translate_element"></div>
+        <div class="google_translate_element" tabindex="4"></div>
     </nav>
 
     <main>
@@ -66,10 +72,7 @@
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script src="/js/contact.js"></script>
     <script src="/js/index.js"></script>
-    <script type="text/javascript"
-        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    <script type="text/javascript" src="/js/translate.js"></script>
-
+    <script src="/js/translate.js"></script>
 </body>
 
 </html>
