--- a/pages/template.html
+++ b/pages/template.html
@@ -10,10 +10,10 @@
 
 <body>
     <header>
-        <button tabindex="0" class="logo" href="/pages/home.html"><img src="/images/image.png" alt=""></button>
-        <button tabindex="0" class="header" href="/pages/projet.html">Projet </button>
-        <button tabindex="0" class="header" href="/pages/about.html">A propos</button>
-        <button tabindex="0" class="header" href="/pages/contact.html">Contact</button>
+        <button tabindex="0" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
+        <button tabindex="0" class="header"><a href="/pages/projet.html">Projet</a></button>
+        <button tabindex="0" class="header"><a href="/pages/about.html">A Propos</a></button>
+        <button tabindex="0" class="header"><a href="/pages/contact.html">Contact</a></button>
         <button tabindex="0" class="header">Langue</button>
     </header>
     <header class="mobile">
@@ -21,9 +21,9 @@
         <button tabindex="0" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="0" class="header" href="/pages/projet.html">Projet</button>
-        <button tabindex="0" class="header" href="/pages/about.html">A propos</button>
-        <button tabindex="0" class="header" href="/pages/contact.html">Contact</button>
+        <button tabindex="0" class="header"><a href="/pages/projet.html">Projet</a></button>
+        <button tabindex="0" class="header"><a href="/pages/about.html">A Propos</a></button>
+        <button tabindex="0" class="header"><a href="/pages/contact.html">Contact</a></button>
         <button tabindex="0" class="header">Langue</button>
     </nav>
 
@@ -44,6 +44,6 @@
     </footer>
 </body>
 
-<script src="../js/index.js"></script>
+<script src="/js/index.js"></script>
 
 </html>
