add tabindex to template.html

--- a/index.html
+++ b/index.html
@@ -35,54 +35,64 @@
     </nav>
     <Main>
         <section class="Title">
-            <h1>           
+            <h1 tabindex="5">           
                 Ensemble pour la mobilité des enfants avec un handicap moteur.
             </h1>
-            <img src="/images/asset 1.png" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+            <img src="/images/asset 1.png" tabindex="6" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
         </section>
         <section class="First">
-            <h1>           
+            <h1 tabindex="7">           
                 Notre raison d'être.
             </h1>
             <section>
-                <p>
+                <p tabindex="8">
                     L'association a pour but de sensibiliser et de faciliter la mobilité, l'accessibilité et la réhabilitation pour les personnes en situation de handicap.
                     Elle aspire à améliorer leur qualité de vie en leur permettant d'accéder à des équipements adaptés.
                     L'objectif de A.M.A.R. est de créer un environnement inclusif où chaque personne a la possibilité de vivre et de s'épanouir pleinement dans la société.
                 </p>
-                <img src="/images/a.m.a.r.-identite-illustration-papillon.png" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+                <img src="/images/a.m.a.r.-identite-illustration-papillon.png" tabindex="9" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
             </section>
         </section>
         <section class="Second">
-            <h1>                
+            <h1 tabindex="10">                
                 Que fait A.M.A.R ?
             </h1>
             <section class="Third">
-                <p>
+                <p tabindex="11">
                     Des enfants, ayant un handicap moteur, bénéficient d'appareillages selon leurs besoins.
                     Le but de l’association A.M.A.R est de récupérer ces appareillages afin de faire donation à un maximum d’enfants...
                     Lorsque arrive le moment de changer, environ tous les 2 ou 3 ans, l'ancien appareillage, encore en bon état, 
                     ne se réutilise pas et il finit la plupart du temps à la déchetterie.
                 </p>
                 <section>
-                    <img src="/images/asset 7.png" alt=""/>
-                    <h6>Verticalisateur</h6>
+                    <img src="/images/asset 7.png" alt="dessin d'un Verticalisateur" tabindex="12"/>
+                    <h6 tabindex="13">Verticalisateur</h6>
                 </section>
             </section>
             <section class="Fourth">
-                <p>
+                <p tabindex="14">
                     Le but de l’association A.M.A.R est de récupérer ces appareillages afin de faire donation à un maximum d’enfants...
                     Lorsque arrive le moment de changer, environ tous les 2 ou 3 ans, l'ancien appareillage, encore en bon état, ne se réutilise pas et il finit la plupart du temps à la déchetterie.
                     Tout le matériel est suivi et quand ces enfants grandiront, ils les redonneront à leur tour pour être réutilisés autant de fois que possible.
                     La vie, la santé et le confort de milliers d’enfants sera ainsi amélioré !
                 </p>
                 <section>
-                    <img src="/images/asset 5.png" alt=""/>
-                    <h6>Fauteuil</h6>
+                    <img src="/images/asset 5.png" alt="dessin d'un Fauteuil" tabindex="15"/>
+                    <h6 tabindex="16">Fauteuil</h6>
                 </section>
             </section>
         </section>          
     </Main>
+    <footer>
+        <h4 tabindex="17">Soutenez-nous !</h4>
+        <p tabindex="18">Vous voulez faire partie de l'aventure ?</p>
+        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="19">Faire un don</button>
+        <div class="logo-footer">
+            <img tabindex="20" src="../images/image.png" alt="logo amar représentant un coeur">
+            <p tabindex="21">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+        </div>
+        <p tabindex="22"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+    </footer>
 
 </body>
 <script src="/js/index.js"></script>
