add accessibility page on idex.php

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             <p tabindex="21">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
         <p tabindex="22"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="23">
+            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        </p>
     </footer>
 
 </body>
