Corrige contanct 2 img

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -65,7 +65,7 @@
         </section>
 
         <figure>
-            <img src="images/asset14.png" alt="deux mains qui se serrent" />
+            <img src="../images/asset14.png" alt="deux mains qui se serrent" />
         </figure>
     </main>
     <footer>
@@ -73,7 +73,7 @@
         <p tabindex="16">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="17">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="18" src="images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="18" src="../images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="19">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
         <p tabindex="20"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
